[workspace.package]
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
repository = "https://github.com/zigbee-rs"
readme = "README.md"
edition = "2021"

[workspace]
members = [
    "zigbee",
    "zigbee-cluster-library",
]
resolver = "3"

[workspace.dependencies]
heapless = "0.8.0"
strum = { version = "0.27.1" }
thiserror = { version = "2.0.6" }
byte = "0.2.7"

