[workspace.package]
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
repository = "https://github.com/zigbee-rs"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "zigbee",
    "zigbee-base-device-behavior",
    "zigbee-cluster-library",
]
resolver = "3"

[workspace.dependencies]
byte = "0.2.7"
embedded-storage = "0.3.1"
heapless = "0.8.0"
mockall = "0.13"
spin = { version = "0.10.0", default-features = false, features = ["spin_mutex", "mutex"] }
thiserror = { version = "2.0.6", default-features = false }
