[package]
name = "zigbee-cluster-library"
version = "0.1.0-alpha.3"

description = "ZigBee cluster library in `no-std` based on the official ZigBee Cluster Library Specification Rev 8"
documentation = "https://docs.rs/zigbee-cluster-library"
readme = "README.md"
keywords = ["zigbee", "ieee802154", "cluster-library", "zcl"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"

authors.workspace = true
edition = "2018"
rust-version = "1.50"

[features]

[dependencies]
byte.workspace = true
heapless.workspace = true
zigbee = { version = "0.1.0-alpha.3", path = "../zigbee" }
