[package]
name = "zigbee-mac"
version = "0.1.0"
repository = "https://github.com/zigbee-rs"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.28"
ieee802154 = "0.6.1"

esp-sync = { version = "0.1.0", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-hal = { version = "=1.0.0-rc.1", features = ["rt", "unstable"], default-features = false, optional = true }
esp-radio = { version = "0.16.0", features = ["ieee802154", "unstable"], default-features = false, optional = true }

[features]
default = []
esp32c6 = [
    "dep:esp-radio",
    "dep:esp-hal",
    "dep:esp-alloc",
    "dep:esp-sync",
    "esp-radio/esp32c6",
    "esp-hal/esp32c6",
    "esp-alloc/esp32c6",
    "esp-sync/esp32c6",
]
