[package]
name = "zigbee-mac"
version = "0.1.0"
repository = "https://github.com/zigbee-rs"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.9.1"
log = "0.4.28"
ieee802154 = "0.6.1"
thiserror = { version = "2.0.6", default-features = false }
byte = "0.2.7"

esp-sync = { version = "0.1.0", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-hal = { version = "1.0.0", features = ["rt", "unstable"], default-features = false, optional = true }
esp-radio = { version = "0.17.0", features = ["ieee802154", "unstable"], default-features = false, optional = true }

embassy-sync = { version = "0.7", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-futures = { version = "0.1", optional = true }

zigbee-macros = { version = "0.1.0", path = "../zigbee-macros" }
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }

[features]
default = []
alloc = []
esp32c6 = [
    "alloc",
    "dep:esp-radio",
    "dep:esp-hal",
    "dep:esp-alloc",
    "dep:esp-sync",
    "esp-radio/esp32c6",
    "esp-hal/esp32c6",
    "esp-alloc/esp32c6",
    "esp-sync/esp32c6",
    "dep:embassy-sync",
    "dep:embassy-time",
    "dep:embassy-futures",
]
