[package]
name = "zigbee-mac"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/zigbee-rs"
license = "MIT OR Apache-2.0"

[dependencies]
byte = "0.2.7"
heapless = "0.9.1"
ieee802154 = "0.6.1"
log = "0.4.28"
thiserror = { version = "2.0.6", default-features = false }

esp-alloc = { version = "0.10.0", optional = true }
esp-radio = { version = "0.18.0", default-features = false, features = [
  "ieee802154",
  "unstable"
], optional = true }
esp-sync = { version = "0.2.1", optional = true }

esp-hal = { version = "~1.1.0", default-features = false, features = [
  "rt",
  "unstable"
], optional = true }

embassy-futures = { version = "0.1", optional = true }
embassy-sync = { version = "0.8", optional = true }
embassy-time = { version = "0.5", optional = true }

zigbee-macros = { path = "../zigbee-macros", version = "0.1.0" }
zigbee-types = { path = "../zigbee-types", version = "0.1.0" }

[features]
default = []
alloc = []
esp32c5 = [
  "alloc",
  "dep:embassy-futures",
  "dep:embassy-sync",
  "dep:embassy-time",
  "dep:esp-alloc",
  "dep:esp-hal",
  "dep:esp-radio",
  "dep:esp-sync",
  "esp-hal/esp32c5",
  "esp-radio/esp32c5",
  "esp-sync/esp32c5",
]
esp32c6 = [
  "alloc",
  "dep:embassy-futures",
  "dep:embassy-sync",
  "dep:embassy-time",
  "dep:esp-alloc",
  "dep:esp-hal",
  "dep:esp-radio",
  "dep:esp-sync",
  # "esp-alloc/esp32c6",
  "esp-hal/esp32c6",
  "esp-radio/esp32c6",
  "esp-sync/esp32c6",
]
