[package]
name = "zigbee"
version = "0.1.0-alpha.3"

description = "ZigBee protocol stack in `no-std` based on the official ZigBee Specification Rev 23"
documentation = "https://docs.rs/zigbee"
readme = "README.md"
keywords = ["zigbee", "ieee802154", "embedded", "iot"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"

authors.workspace = true
repository.workspace = true
edition.workspace = true

[features]

[dependencies]
byte.workspace = true
ccm.workspace = true
aes.workspace = true
embedded-storage.workspace = true
spin.workspace = true
heapless.workspace = true
thiserror = { workspace = true, default-features = false } 
lazy_static = "1.5.0"

