[package]
name = "zigbee"
version = "0.1.0-alpha.3"

description = "ZigBee protocol stack in `no-std` based on the official ZigBee Specification Rev 23"
documentation = "https://docs.rs/zigbee"
readme = "README.md"
keywords = ["zigbee", "ieee802154", "embedded", "iot"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"

authors.workspace = true
repository.workspace = true
edition.workspace = true

[features]
mock = ["dep:mockall"]
alloc = []

[dependencies]
byte.workspace = true
ccm.workspace = true
aes.workspace = true
aead.workspace = true
itertools.workspace = true
embedded-storage.workspace = true
spin.workspace = true
heapless.workspace = true
thiserror = { workspace = true, default-features = false } 
mockall = { workspace = true, optional = true }

zigbee-mac = { version = "0.1.0", path = "../zigbee-mac" }
zigbee-macros = { version = "0.1.0", path = "../zigbee-macros" }
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
