[workspace]

[package]
name = "esp-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-alloc = { version = "0.9.0" }
esp-backtrace = { version = "0.18.0", features = [
    "panic-handler",
    "println",
	"esp32c6",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-hal = { version = "1.0.0", features = ["log-04", "unstable", "esp32c6"] }
esp-println = { version = "0.16.0", features = ["log-04"] }
esp-radio = { version = "0.17.0", features = [
    "ieee802154",
    "unstable",
	"esp32c6",
] }
esp-rtos = { version = "0.2.0", features = ["embassy", "log-04", "esp32c6"] }
embedded-storage = "0.3.1"
esp-storage = { version = "0.8.0", features = ["esp32c6"] }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"

zigbee = { path = "../../zigbee" }
zigbee-mac = { path = "../../zigbee-mac", features = ["esp32c6"] }

[profile.release]
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1
