[workspace]

[package]
name = "esp-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-alloc = { version = "0.10.0" }
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    "println",
	"esp32c6",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }
esp-hal = { version = "1.0.0", features = ["log-04", "unstable", "esp32c6"] }
esp-println = { version = "0.17.0", features = ["log-04"] }
esp-radio = { version = "0.18.0", features = [
    "ieee802154",
    "unstable",
	"esp32c6",
] }
esp-rtos = { version = "0.3.0", features = ["embassy", "log-04", "esp32c6"] }
embassy-executor = "0.10.0"
embassy-time = "0.5.0"
heapless = "0.9.1"

zigbee = { path = "../../zigbee" }
zigbee-types = { version = "0.1.0", path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["esp32c6"] }
zigbee-base-device-behavior = { path = "../../zigbee-base-device-behavior" }

[profile.release]
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1
