[workspace]

[package]
name = "esp-simple-sniffer"
version = "0.1.0"
authors = ["Patrick Willner <50421879+heat1q@users.noreply.github.com>"]
edition = "2024"

[dependencies]
byte = "0.2.7"
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    # "exception-handler",
    "panic-handler",
    "println",
] }
esp-alloc = { version = "0.10.0" }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }
esp-hal = { version = "1.1.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
esp-radio = { version = "0.18.0", features = ["ieee802154", "unstable", "esp32c6"] }
hex = { version = "0.4.3", default-features = false }
ieee802154 = "0.6.1"
log = { version = "0.4.21" }
zigbee = { path = "../../zigbee" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
