[workspace]

[package]
name = "nrf52-sensor"
version = "0.1.0"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
edition = "2024"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.15"
panic-halt = "1.0.0"
nrf52833-hal = { version = "0.18.0", optional = true }
nrf52840-hal = { version = "0.18.0", optional = true }

[features]
default = ["nrf52833"]
nrf52833 = ["dep:nrf52833-hal"]
nrf52840 = ["dep:nrf52840-hal"]
