[workspace]

[package]
name = "esp-sensor"
version = "0.1.0"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
edition = "2021"

[[bin]]
name = "esp-sensor"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "log-04", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.21" }
zigbee = { path = "../../" }

